Edit script file and fix teacher info loading process

--- a/about.css
+++ b/about.css
@@ -60,7 +60,7 @@ h1.fw-bolder {
 }
 
 .main {
-  background-image: url(/assets/images/mainbg.png);
+  background-image: url(./assets/images/mainbg.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -141,7 +141,7 @@ h1.fw-bolder {
 
 .history_section .img_section .img_cover {
   /* flex: 1; */
-  background-image: url(assets/images/filarmonica-di-san-pietroburgo2.jpg);
+  background-image: url(./assets/images/filarmonica-di-san-pietroburgo2.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
