--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ h1.fw-bolder {
 }
 
 .main {
-  background-image: url(/assets/images/mainbg.png);
+  background-image: url(./assets/images/mainbg.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -75,7 +75,7 @@ h1.fw-bolder {
 }
 
 .section {
-  background-image: url(/assets/images/backgrounds2.png);
+  background-image: url(./assets/images/backgrounds2.png);
 }
 
 .section h5 {
@@ -183,7 +183,7 @@ h1.fw-bolder {
   width: 50px;
   height: 50px;
   border: 1px solid gray;
-  background-image: url(/assets/images/black-white.png);
+  background-image: url(./assets/images/black-white.png);
   background-size: cover;
   float: left;
 }
